# casa

./: README.md  pyproject.toml
casa-animation/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
casa-animation/src/: project.ts
casa-animation/src/scenes/: example.tsx
scripts/: eval.sh  gen_livecc_subtitles.py  inference.py
